# backup-tools

./: README.md  docker-nginx.yml  minio.env  pyproject.toml
backup_tools/: minio.py
backup_tools/templates/: docker-compose.yml.j2  minio.env.j2  nginx.conf.j2  test.j2
minio/: docker-compose.minio.template
src/: README.md
tests/: test_backup_tools.py
