[tool.poetry]
name = "backup-tools"
version = "0.1.0"
description = ""
authors = ["Duncan Fyfe <duncanfyfe@domenlas.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
